logs/deer.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/deer'...
Listing './lib/python3.5/site-packages/deer/base_classes'...
Listing './lib/python3.5/site-packages/deer/experiment'...
Compiling './lib/python3.5/site-packages/deer/experiment/base_controllers_BACKUP_3315.py'...
***   File "./lib/python3.5/site-packages/deer/experiment/base_controllers_BACKUP_3315.py", line 490
    <<<<<<< HEAD
     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/deer/helper'...
Listing './lib/python3.5/site-packages/deer/policies'...
Compiling './lib/python3.5/site-packages/deer/policies/ModelAndValueBasedPolicy.py'...
***   File "./lib/python3.5/site-packages/deer/policies/ModelAndValueBasedPolicy.py", line 26
    print outs[3:]
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/deer/policies/PlanningPolicy.py'...
***   File "./lib/python3.5/site-packages/deer/policies/PlanningPolicy.py", line 23
    for a in n_actions
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/deer/q_networks'...
Compiling './lib/python3.5/site-packages/deer/q_networks/NN_keras_old.py'...
***   File "./lib/python3.5/site-packages/deer/q_networks/NN_keras_old.py", line 39
    print i
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/deer/q_networks/q_net_theano_NTM.py'...
*** Sorry: IndentationError: expected an indented block (q_net_theano_NTM.py, line 265)
Listing './lib/python3.5/site-packages/deer/tests'...
Listing './lib/python3.5/site-packages/deer-0.3.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
